17/02/2024 - timeBar css overlap issue

--- a/src/components/InformationBar.css
+++ b/src/components/InformationBar.css
@@ -5,6 +5,7 @@
 
 .informationBar_fullBar {
   position: relative;
+  z-index:3;
   height: 4px;
   background: linear-gradient(
     to right, 
@@ -26,8 +27,9 @@
   box-sizing: border-box;
 }
 
+
 .informationBar_fullBar:hover {
-  height: 8px; 
+  height: 12px; 
   padding-bottom: 4px;
   cursor: pointer;
 }
@@ -45,8 +47,9 @@
   box-sizing: border-box;
 }
 
-.informationBar_timeBar:hover {
-  height: 8px; 
+.informationBar_fullBar:hover .informationBar_timeBar,
+.informationBar_fullBar:active .informationBar_timeBar {
+  height: 12px; 
   padding-bottom: 4px;
   cursor: pointer;
 }
@@ -56,10 +59,11 @@
   right: calc(100% - var(--progress) - 6px); 
   top: 50%;
   transform: translateY(-50%); 
-  width: 8px;
-  height: 8px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%; 
   background-color: #ffffff; 
+  z-index: 4;
 }
 
 .informationBar {
@@ -147,3 +151,31 @@
     transform: translateX(0%); /* Move to the left */
   }
   
+  .informationBar_tooltip {
+    position: absolute;
+    bottom: 100%; 
+    left: var(--progress); 
+    transform: translateX(-50%); 
+    background-color: #000;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 12px;
+    text-align: center;
+    width:35px;
+    white-space: nowrap;
+    z-index: 100;
+  }
+
+  .informationBar_fullBar:hover .informationBar_tooltip_seekerBar {
+    visibility: visible;
+  }
+  
+  .informationBar_tooltip_seekerBar {
+    position: absolute;
+    height: 12px;
+    background-color: #545454;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+    visibility: hidden;
+  }
